// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogWindow should match the snapshot 1`] = `
<Paper
  background="#ffffff"
  overflow="hidden"
  padding="10px"
  radius="0"
>
  <styled.div
    gridGap="0"
    padding="0"
  >
    <styled.div
      colXS={12}
    />
    <styled.div
      colXS={12}
    >
      <DialogContent />
    </styled.div>
    <styled.div
      colXS={12}
    >
      <DialogActions />
    </styled.div>
  </styled.div>
</Paper>
`;

exports[`DialogWindow should match the snapshot with children 1`] = `
<Paper
  background="#ffffff"
  overflow="hidden"
  padding="10px"
  radius="0"
>
  <styled.div
    gridGap="0"
    padding="0"
  >
    <styled.div
      colXS={12}
    />
    <styled.div
      colXS={12}
    >
      <DialogContent>
        <h1>
          Mock
        </h1>
      </DialogContent>
    </styled.div>
    <styled.div
      colXS={12}
    >
      <DialogActions />
    </styled.div>
  </styled.div>
</Paper>
`;
